Fixed User Show Picture Spacing

--- a/app/assets/stylesheets/components/photo_index.css
+++ b/app/assets/stylesheets/components/photo_index.css
@@ -55,6 +55,12 @@
     min-height: 235px;
 }
 
+.likes-comments {
+    margin-top: 4px;
+    padding-left: 16px;
+    padding-right: 16px;
+}
+
 .post-body-username {
     font-weight: 600;
     padding-left: 20px;
