--- a/app/assets/stylesheets/components/user_show.css
+++ b/app/assets/stylesheets/components/user_show.css
@@ -28,6 +28,7 @@
 }
 
 .user-top {
+    width: 1000px;
     display: flex;
     flex-direction: column;
     margin-bottom: 44px;
@@ -108,6 +109,7 @@
 }
 
 .user-posts {
+    width: 1000px;
     display: flex;
     /* flex-wrap: wrap; */
 }
